# kerox

./: .gitignore  README.md  pyproject.toml
src/kerox/: __init__.py  activations.py  core.py  dense.py  layer.py  models.py  namespace.py  sequential.py  typing.py  variable.py
src/kerox/layers/: __init__.py  dense.py  dropout.py  input_layer.py  layer.py
src/kerox/ops/: __init__.py  core.py  numpy.py  random.py  utils.py
