[project]
name = "kerox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "johacks", email = "joaquinjimenezlc@gmail.com" }
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "ndonnx>=0.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
