[project]
name = "kerox"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "johacks", email = "joaquinjimenezlc@gmail.com" }
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "ndonnx>=0.9.3",
    "networkx>=3.4.2",
    "onnxruntime-training>=1.19.2",
    "onnxruntime>=1.20.1",
    "optree>=0.13.1",
    "keras>=3.7.0",
    "jaxtyping>=0.2.36",
    "jax>=0.4.35",
    "tensorflow>=2.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/kerox/__about__.py"

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# Adds isort and docstring linting
extend-select = ["I"]
# Ignore bothersome warnings
extend-ignore = ["E402"]
# Don't autoremove unused imports, variable, etc.
unfixable = ["F401"]
# A file or directory to exclude from linting
exclude = ["scratchpad.py"]
